apps/weather_app/static/style.css
* {
    margin: 0px;
    padding: 0px;
}
.flexed {
    display: flex;
}
.wrapper {
    padding: 0px 20% 0px 20%;
    justify-content: space-between;
    flex-wrap: wrap;
}

.weather{
    text-align: center;
    height: 100%;
    /* border: 1px solid black; */
}

.stat_box {
    margin-top: 50px;
    padding: 10px;
    border-radius: 10px;
    background: linear-gradient(0deg, rgba(236,236,236,1) 0%, rgba(248,255,255,1) 49%, rgba(236,236,236,1) 100%);
    height: 300px;
}
.stat_box-top img {
    width: 30px;
    text-align: right;
}
.stat_box-bottom {
    align-items: center;
    justify-content: center;

}
.stat_box-top {
    height: 50px;
}
.favorites {
    text-align: right;
    width: 40%;
}
.borderless {
    border: 0px;
}
.favorite{
    border: 1px solid rgb(143, 141, 141);
    border-radius: 20px;
    box-shadow: 2px 2px rgb(143, 141, 141);
    padding: 10px;
    justify-content: space-between;
    margin-bottom: 10px;
}
.favorite-right img {
    width: 20px;
    cursor: pointer;
}
#city {
    border-radius: 10px;
    height: 50px;
    width: 60%;
    transition: 0.3s;
}
#city:focus {
    padding: 0px 15px 0px 15px;
    transition: 0.3s;
}
#button {
    height: 50px;
    padding: 2px 5px 2px 5px;
    border-radius: 10px;
    border: 0px;
    background-color: rgb(26, 190, 163);
    color: white;
    transition: 0.6s;
}
#button:hover {
    background-color: rgb(68, 111, 230);
    transition: 0.6s;
}

